# benchwiki

./: README.md
api/: package.json  schema.sql  wrangler.toml
api/src/: index.ts
cli/: pyproject.toml
cli/benchwiki/: benchmark.py  cli.py  detect.py  submit.py
web/: index.html  submit.html
