[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchwiki"
version = "0.1.0"
description = "CLI for submitting AI inference benchmarks to BenchWiki"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.0"]

[project.scripts]
benchwiki = "benchwiki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["benchwiki"]
